[Fit Import/Export] [Tour Nutrition] [Tour Blog] Multiple improvements and fixes (#1324)